# Cavina_Barbieri

./: .clang-format  .gitignore  CMakeLists.txt  TEMP_CM COPY.txt  bird.cpp  bird.hpp  file_table.cpp  file_table.hpp  flock.cpp  flock.hpp  game.cpp  game.hpp  gui.cpp  gui.hpp  main.cpp  main_sample.cpp  statistics.hpp  test.cpp  text_table.cpp  text_table.hpp  vector2d.cpp  vector2d.hpp  vector3d.cpp  vector3d.hpp
matplotplusplus/: CMakeLists.txt
matplotplusplus/cmake/functions/: target_options.cmake
matplotplusplus/examples/: CMakeLists.txt
matplotplusplus/source/matplot/: CMakeLists.txt
